--- a/vignettes/mulea.Rmd
+++ b/vignettes/mulea.Rmd
@@ -72,17 +72,13 @@ sections.
 
 ### **1. Downloading and Exploring the Dataset:**
 
-<<<<<<< HEAD
 This example analyses a differential expression (DE) dataset from a microarray 
 experiment deposited in the NCBI Gene Expression Omnibus 
-![GEO](man/figures/geo_main.gif){alt="GEO" width="87"} under accession number [GSE55662](https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE55662). The 
+![GEO](../man/figures/geo_main.gif){alt="GEO" width="87"} under accession number [GSE55662](https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE55662). The 
 original study by [Méhi *et al.* (2014)](https://doi.org/10.1093/molbev/msu223), 
 investigated the evolution of antibiotic resistance in *Escherichia coli* 
 bacteria. The authors compared gene expression changes in 
 *ciprofloxacin*-treated bacteria to non-treated controls.
-=======
-This example analyses a differential expression (DE) dataset from a microarray experiment deposited in the NCBI Gene Expression Omnibus ![GEO](../man/figures/geo_main.gif){alt="GEO" width="87"} under accession number [GSE55662](https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE55662). The original study by [Méhi *et al.* (2014)](https://doi.org/10.1093/molbev/msu223), investigated the evolution of antibiotic resistance in *Escherichia coli* bacteria. The authors compared gene expression changes in *ciprofloxacin*-treated bacteria to non-treated controls.
->>>>>>> c7c88fa2b8038d50816a25a4c0b9b850f092aaa9
 
 The [GEO2R](https://www.ncbi.nlm.nih.gov/geo/geo2r/?acc=GSE55662) tool was used 
 for differential expression analysis, comparing:
@@ -156,15 +152,11 @@ analysis.
 
 ## The Gene Set for Identifying Regulatory Transcription Factors
 
-<<<<<<< HEAD
 This section explores the transcription factors influencing the significantly 
 overexpressed genes. We employed the `mulea` package to conduct multiple 
 enrichment analyses using the 
-![Regulon](man/figures/Regulon.png){alt="Regulon" width="114" height="25"} 
+![Regulon](../man/figures/Regulon.png){alt="Regulon" width="114" height="25"} 
 [database](https://regulondb.ccg.unam.mx/).
-=======
-This section explores the transcription factors influencing the significantly overexpressed genes. We employed the `mulea` package to conduct multiple enrichment analyses using the ![Regulon](../man/figures/Regulon.png){alt="Regulon" width="114" height="25"} [database](https://regulondb.ccg.unam.mx/).
->>>>>>> c7c88fa2b8038d50816a25a4c0b9b850f092aaa9
 
 The analysis utilized a GMT file downloaded from the dedicated 
 [GMT_files_for_mulea](https://github.com/ELTEbioinformatics/GMT_files_for_mulea) 
